spacing fixes on ipad

--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -10,6 +10,10 @@
   gap: 0.5rem;
   margin: 0 1rem;
 
+  @include media-breakpoint-up(md) {
+    grid-template-columns: repeat(1, 434px);
+  }
+
   @include media-breakpoint-up(lg) {
     grid-template-columns: repeat(2, 434px);
     gap: 0.75rem;
@@ -324,6 +328,7 @@
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-align: justify;
 
     @include media-breakpoint-up(lg) {
       display: block;
